feature: add an SLE parser and wire into a cucumber test to confirm that the parser is correctly wired

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,8 @@
     <properties>
         <kotlin.version>1.2.41</kotlin.version>
         <antlr.version>4.7.1</antlr.version>
-        <junit.version>4.10</junit.version>
+        <junit.version>4.12</junit.version>
+        <cucumber.version>3.0.2</cucumber.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -40,6 +41,18 @@
             <groupId>org.antlr</groupId>
             <artifactId>antlr4-runtime</artifactId>
             <version>${antlr.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java8</artifactId>
+            <version>${cucumber.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>${cucumber.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
