--- a/j10-translator/pom.xml
+++ b/j10-translator/pom.xml
@@ -13,16 +13,6 @@
     <artifactId>j10-translator</artifactId>
     <packaging>jar</packaging>
 
-    <properties>
-        <kotlin.version>1.2.50</kotlin.version>
-        <antlr.version>4.7.1</antlr.version>
-        <junit.version>5.2.0</junit.version>
-        <javaparser.version>3.6.11</javaparser.version>
-        <kotlin.test.version>3.1.6</kotlin.test.version>
-
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
@@ -58,6 +48,11 @@
             <version>${kotlin.test.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>za.co.no9</groupId>
+            <artifactId>j10-runtime</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -70,8 +65,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>10</source>
+                    <target>10</target>
                 </configuration>
             </plugin>
             <plugin>
