feature: add a maven-plugin module which will be used as the basis for building the Java SLE translator

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>j10-runtime</module>
         <module>parser</module>
         <module>j10-translator</module>
+        <module>j8-maven-plugin</module>
     </modules>
 
     <dependencies>
