--- a/j8-maven-plugin-test/pom.xml
+++ b/j8-maven-plugin-test/pom.xml
@@ -10,18 +10,51 @@
         <artifactId>sle-jvm</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>j8-sle-test</artifactId>
+    <artifactId>j8-maven-pojo-test</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
             <groupId>za.co.no9</groupId>
+            <artifactId>parser</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.javaparser</groupId>
+            <artifactId>javaparser-symbol-solver-core</artifactId>
+            <version>${javaparser.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-test-junit</artifactId>
+            <version>${kotlin.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.kotlintest</groupId>
+            <artifactId>kotlintest-runner-junit5</artifactId>
+            <version>${kotlin.test.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>za.co.no9</groupId>
             <artifactId>j10-runtime</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
     <build>
+        <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
+        <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -62,25 +95,9 @@
                     </execution>
                     <execution>
                         <id>test-compile</id>
-                        <phase>process-test-sources</phase>
+                        <phase>test-compile</phase>
                         <goals>
                             <goal>test-compile</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>za.co.no9</groupId>
-                <artifactId>j8-sle</artifactId>
-                <version>1.0-SNAPSHOT</version>
-
-
-                <executions>
-                    <execution>
-                        <phase>process-sources</phase>
-                        <goals>
-                            <goal>j8-sle</goal>
                         </goals>
                     </execution>
                 </executions>
