--- a/j8-maven-plugin-test/pom.xml
+++ b/j8-maven-plugin-test/pom.xml
@@ -47,7 +47,7 @@
             <groupId>za.co.no9</groupId>
             <artifactId>j10-runtime</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <scope>test</scope>
+            <!--<scope>test</scope>-->
         </dependency>
     </dependencies>
 
@@ -99,6 +99,38 @@
                         <goals>
                             <goal>test-compile</goal>
                         </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>za.co.no9</groupId>
+                <artifactId>j8-sle</artifactId>
+                <version>1.0-SNAPSHOT</version>
+
+                <executions>
+                    <execution>
+                        <phase>process-sources</phase>
+                        <goals>
+                            <goal>j8-sle</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>${project.build.directory}/generated-sources/sle</source>
+                            </sources>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
