--- a/j8-maven-plugin/pom.xml
+++ b/j8-maven-plugin/pom.xml
@@ -19,6 +19,16 @@
             <artifactId>kotlin-stdlib</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
+        <dependency>
+            <groupId>za.co.no9</groupId>
+            <artifactId>parser</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>za.co.no9</groupId>
+            <artifactId>j10-translator</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.maven</groupId>
@@ -62,6 +72,11 @@
                     <source>8</source>
                     <target>8</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-plugin-plugin</artifactId>
+                <version>3.3</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -111,23 +126,23 @@
             </plugin>
 
             <!--<plugin>-->
-                <!--<groupId>za.co.no9</groupId>-->
-                <!--<artifactId>j8-sle</artifactId>-->
-                <!--<version>1.0-SNAPSHOT</version>-->
+            <!--<groupId>za.co.no9</groupId>-->
+            <!--<artifactId>j8-sle</artifactId>-->
+            <!--<version>1.0-SNAPSHOT</version>-->
 
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<phase>process-sources</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>j8-sle</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
+            <!--<executions>-->
+            <!--<execution>-->
+            <!--<phase>process-sources</phase>-->
+            <!--<goals>-->
+            <!--<goal>j8-sle</goal>-->
+            <!--</goals>-->
+            <!--</execution>-->
+            <!--</executions>-->
 
-                <!--<configuration>-->
-                    <!--<sourceDirectory>${project.basedir}/src/main/sle</sourceDirectory>-->
-                    <!--<outputDirectory>${project.basedir}/target/generated-sources/sle/java</outputDirectory>-->
-                <!--</configuration>-->
+            <!--<configuration>-->
+            <!--<sourceDirectory>${project.basedir}/src/main/sle</sourceDirectory>-->
+            <!--<outputDirectory>${project.basedir}/target/generated-sources/sle/java</outputDirectory>-->
+            <!--</configuration>-->
             <!--</plugin>-->
         </plugins>
     </build>
