--- a/j8-maven-plugin/pom.xml
+++ b/j8-maven-plugin/pom.xml
@@ -37,8 +37,13 @@
         </dependency>
         <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
+            <artifactId>maven-plugin-tools-api</artifactId>
+            <version>3.5.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-annotations</artifactId>
-            <version>3.4</version>
+            <version>3.5</version>
             <scope>provided</scope>
         </dependency>
 
