refactor: move the test source into the plugin configuration

--- a/j8-maven-plugin-test/pom.xml
+++ b/j8-maven-plugin-test/pom.xml
@@ -47,14 +47,10 @@
             <groupId>za.co.no9</groupId>
             <artifactId>j10-runtime</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <!--<scope>test</scope>-->
         </dependency>
     </dependencies>
 
     <build>
-        <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
-        <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
-
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -99,6 +95,11 @@
                         <goals>
                             <goal>test-compile</goal>
                         </goals>
+                        <configuration>
+                            <sourceDirs>
+                                <sourceDir>${project.basedir}/src/test/kotlin</sourceDir>
+                            </sourceDirs>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
