--- a/j8-parser/pom.xml
+++ b/j8-parser/pom.xml
@@ -10,7 +10,7 @@
         <artifactId>sle-jvm</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>parser</artifactId>
+    <artifactId>j8-parser</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
