--- a/j8-translator/pom.xml
+++ b/j8-translator/pom.xml
@@ -10,13 +10,13 @@
         <artifactId>sle-jvm</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>j10-translator</artifactId>
+    <artifactId>j8-translator</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
             <groupId>za.co.no9</groupId>
-            <artifactId>parser</artifactId>
+            <artifactId>j8-parser</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -45,7 +45,7 @@
         </dependency>
         <dependency>
             <groupId>za.co.no9</groupId>
-            <artifactId>j10-runtime</artifactId>
+            <artifactId>j8-runtime</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
