--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,12 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <kotlin.version>1.2.51</kotlin.version>
         <antlr.version>4.7.1</antlr.version>
-        <junit.version>5.2.0</junit.version>
-        <javaparser.version>3.6.11</javaparser.version>
+        <kotlin.version>1.2.51</kotlin.version>
         <kotlin.test.version>3.1.6</kotlin.test.version>
+        <javaparser.version>3.6.11</javaparser.version>
+        <junit.version>5.2.0</junit.version>
+        <maven.plugin.version>3.5.2</maven.plugin.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -35,18 +36,6 @@
             <version>${kotlin.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-test-junit</artifactId>
-            <version>${kotlin.version}</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>io.kotlintest</groupId>
             <artifactId>kotlintest-runner-junit5</artifactId>
@@ -106,7 +95,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.21.0</version>
+                <version>2.22.0</version>
                 <dependencies>
                     <dependency>
                         <groupId>org.junit.platform</groupId>
