--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,10 @@
     <properties>
         <antlr.version>4.7.1</antlr.version>
         <kotlin.version>1.2.51</kotlin.version>
-        <kotlin.test.version>3.1.6</kotlin.test.version>
-        <javaparser.version>3.6.11</javaparser.version>
+        <kotlin.test.version>3.1.8</kotlin.test.version>
+        <javaparser.version>3.6.12</javaparser.version>
         <junit.version>5.2.0</junit.version>
+        <junit.platform.surefire.provider.version>1.2.0</junit.platform.surefire.provider.version>
         <maven.plugin.version>3.5.2</maven.plugin.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -100,7 +101,7 @@
                     <dependency>
                         <groupId>org.junit.platform</groupId>
                         <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>1.2.0</version>
+                        <version>${junit.platform.surefire.provider.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
