refactor: break out the contents of Typing into their own files

--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <module>j8-parser</module>
         <module>j8-translator</module>
         <module>j8-maven-plugin</module>
-        <!--<module>j8-maven-plugin-test</module>-->
+        <module>j8-maven-plugin-test</module>
     </modules>
 
     <dependencies>
