--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,11 @@
 
     <properties>
         <antlr.version>4.7.1</antlr.version>
-        <kotlin.version>1.2.51</kotlin.version>
-        <kotlin.test.version>3.1.8</kotlin.test.version>
+        <kotlin.version>1.2.60</kotlin.version>
+        <kotlin.test.version>3.1.9</kotlin.test.version>
         <javaparser.version>3.6.13</javaparser.version>
         <junit.version>5.2.0</junit.version>
-        <junit.platform.surefire.provider.version>1.2.0</junit.platform.surefire.provider.version>
+        <junit.platform.surefire.provider.version>1.3.0-M1</junit.platform.surefire.provider.version>
         <maven.plugin.version>3.5.2</maven.plugin.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
