--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,11 @@
 
     <properties>
         <antlr.version>4.7.1</antlr.version>
-        <kotlin.version>1.2.60</kotlin.version>
+        <kotlin.version>1.2.61</kotlin.version>
         <kotlin.test.version>3.1.9</kotlin.test.version>
-        <javaparser.version>3.6.13</javaparser.version>
+        <javaparser.version>3.6.19</javaparser.version>
         <junit.version>5.2.0</junit.version>
-        <junit.platform.surefire.provider.version>1.3.0-M1</junit.platform.surefire.provider.version>
+        <maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
         <maven.plugin.version>3.5.2</maven.plugin.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -96,14 +96,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.junit.platform</groupId>
-                        <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>${junit.platform.surefire.provider.version}</version>
-                    </dependency>
-                </dependencies>
+                <version>${maven.surefire.plugin.version}</version>
             </plugin>
         </plugins>
     </build>
