chore: add gson as a dependency to read and write out exports as json

--- a/j8-translator/pom.xml
+++ b/j8-translator/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>javaparser-symbol-solver-core</artifactId>
             <version>${javaparser.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>za.co.no9</groupId>
