--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <junit.version>5.2.0</junit.version>
         <maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
         <maven.plugin.version>3.6.0</maven.plugin.version>
+        <gson.version>2.8.1</gson.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
