--- a/j8-parser/pom.xml
+++ b/j8-parser/pom.xml
@@ -12,4 +12,12 @@
     </parent>
     <artifactId>j8-parser</artifactId>
     <packaging>jar</packaging>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+        </dependency>
+    </dependencies>
 </project>
