refactor: move the build piece out of j8-maven-plugin into j8-build

--- a/j8-maven-plugin/pom.xml
+++ b/j8-maven-plugin/pom.xml
@@ -16,7 +16,7 @@
     <dependencies>
         <dependency>
             <groupId>za.co.no9</groupId>
-            <artifactId>j8-translator</artifactId>
+            <artifactId>j8-build</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
