refactor: use apache commons StringEscape and StringUnescape

--- a/j8-parser/pom.xml
+++ b/j8-parser/pom.xml
@@ -19,5 +19,10 @@
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.6</version>
+        </dependency>
     </dependencies>
 </project>
