--- a/j8-parser/pom.xml
+++ b/j8-parser/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-text</artifactId>
-            <version>1.6</version>
+            <version>${apache.commons.text.version}</version>
         </dependency>
     </dependencies>
 </project>
