--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     </properties>
 
     <modules>
+        <module>j8-actors</module>
         <module>j8-runtime</module>
         <module>j8-parser</module>
         <module>j8-translator</module>
