--- a/j8-runtime/pom.xml
+++ b/j8-runtime/pom.xml
@@ -15,6 +15,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>za.co.no9</groupId>
+            <artifactId>j8-actors</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-text</artifactId>
             <version>${apache.commons.text.version}</version>
