--- a/j8-tools/pom.xml
+++ b/j8-tools/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>j8-build</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>za.co.no9</groupId>
+            <artifactId>j8-runtime</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>com.xenomachina</groupId>
