feature: add all of the SLE libs that have been developed so far into this project whilst the compiler is under development and before version is ready

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>j8-maven-plugin</module>
         <module>j8-maven-plugin-test</module>
         <module>j8-tools</module>
+        <module>j8-sle-libs</module>
     </modules>
 
     <dependencies>
