feature: add parser AST support for nested expressions

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <module>j8-maven-plugin</module>
         <module>j8-maven-plugin-test</module>
         <module>j8-tools</module>
-        <!--<module>j8-sle-libs</module>-->
+        <module>j8-sle-libs</module>
     </modules>
 
     <dependencies>
