--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <properties>
         <apache.commons.text.version>1.6</apache.commons.text.version>
         <kotlin.version>1.3.11</kotlin.version>
-        <kotlin.test.version>3.2.0-RC2</kotlin.test.version>
+        <kotlin.test.version>3.2.1</kotlin.test.version> <!-- 3.1.11 -->
         <junit.version>5.2.0</junit.version>
         <maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
         <maven.plugin.version>3.6.0</maven.plugin.version>
